Fix WebView on macOS

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   flutter:
     sdk: flutter
   webview_flutter: ^4.7.0
+  webview_flutter_wkwebview: ^3.14.0
 
 dev_dependencies:
   flutter_test:
